Fixing styleguide menu items spacing

--- a/styleguide/components/framework/design/typography/elements/ul/--nested/ul--nested.scss
+++ b/styleguide/components/framework/design/typography/elements/ul/--nested/ul--nested.scss
@@ -13,6 +13,10 @@
         @include transition(opacity);
         display: none;
         opacity: 0;
+
+        li {
+          padding: $lem / 4 0 0;
+        }
       }
 
       &.active {
