--- a/styleguide/components/project/styleguide-menu/styleguide-menu.scss
+++ b/styleguide/components/project/styleguide-menu/styleguide-menu.scss
@@ -7,7 +7,7 @@
   flex-wrap: wrap;
 
   a {
-    @include link(blue-on-white);
+    @include link(blue-on-white, flip);
   }
 
   .styleguide-menu__framework,
